# my-exes

./: .gitignore  LICENSE  example.py  example.yaml  pyproject.toml
.github/workflows/: publish.yml
src/my_exes/: __init__.py  my_ex.py  wandb_logger.py
