[project]
name = "my-exes"
dynamic = ["version"]
description = "A simple package to log your DL experiments"
readme = "README.md"
authors = [
    { name = "Mehdi Seifi", email = "mehdiseifi@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "crc32c>=2.8",
    "hydra-core>=1.3.2",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "tensorboard>=2.18.0",
    "tensorboardx>=2.6.4",
    "torch>=2.0",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"
